--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "concurrently --kill-others \"npm run watch\" \"npm run start-server\" \"npm run watch:styles\""
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.10",
         "browser-sync": "^2.29.3",
         "concurrently": "^8.2.2",
         "daisyui": "^4.6.1",
